Batch update of generated files

--- a/home_quizzes.html
+++ b/home_quizzes.html
@@ -471,6 +471,33 @@
     */
     const newsData = [
   {
+    "title": "Cung đường 'kiểu major' của VnExpress Marathon Volvo All-Star",
+    "content": "Giải VnExpress Marathon Volvo All-Star 2025 sẽ được tổ chức tại Khu công nghệ cao Hòa Lạc, Hà Nội, với cung đường được thiết kế đạt tiêu chuẩn quốc tế nhưng vẫn phù hợp với điều kiện khí hậu và thể trạng của vận động viên Việt Nam. Đường chạy có độ dài chính xác 42,195 km và chỉ có 9 khúc cua, tạo điều kiện thuận lợi cho các vận động viên đạt thành tích cá nhân tốt. Ban tổ chức cũng đã bố trí nhiều trạm tiếp nước để hỗ trợ các VĐV trong điều kiện thời tiết nóng ẩm của Việt Nam, bên cạnh việc áp dụng tiêu chí cut-off time nghiêm ngặt hơn so với các giải marathon trong nước.",
+    "link": "https://vnexpress.net/cung-duong-kieu-major-cua-vnexpress-marathon-volvo-all-star-4865663.html",
+    "cat": "the-thao",
+    "positivity": 8,
+    "importance": 7,
+    "question": "Cung đường VnExpress Marathon Volvo All-Star 2025 có những đặc điểm gì nổi bật?",
+    "answers": [
+      {
+        "text": "Đạt tiêu chuẩn quốc tế với ít khúc cua và nhiều trạm tiếp nước.",
+        "correct": true
+      },
+      {
+        "text": "Có độ dài ngắn hơn so với các marathon khác.",
+        "correct": false
+      },
+      {
+        "text": "Có nhiều khúc cua hơn các giải marathon khác.",
+        "correct": false
+      },
+      {
+        "text": "Được tổ chức vào mùa đông để tránh nóng.",
+        "correct": false
+      }
+    ]
+  },
+  {
     "title": "Con trai út của ông Trump giải thể công ty chỉ sau 4 tháng",
     "content": "Barron Trump, con trai út của Tổng thống Mỹ Donald Trump, đã giải thể công ty bất động sản mà anh thành lập cùng hai người bạn chỉ sau bốn tháng hoạt động. Quyết định này được đưa ra nhằm tránh sự chú ý từ truyền thông và những rắc rối pháp lý có thể xảy ra do xung đột lợi ích với vị trí của cha anh. Mặc dù công ty đã đóng cửa, Barron và các đối tác vẫn có kế hoạch khởi động lại dự án với một hướng đi mới trong lĩnh vực bất động sản cao cấp và sân golf.",
     "link": "https://tuoitre.vn/con-trai-ut-cua-ong-trump-giai-the-cong-ty-chi-sau-4-thang-20250325222435828.htm",
@@ -4134,33 +4161,6 @@
     ]
   },
   {
-    "title": "Sống - làm việc - giải trí đa thế hệ tại công viên xanh rộng lớn ở miền Trung",
-    "content": "Công viên Eco Central Park ở miền Trung Việt Nam là khu đô thị lớn với diện tích gần 200ha, cung cấp không gian sống, làm việc và giải trí cho cư dân đa thế hệ. Dự án chú trọng vào việc phát triển không gian xanh và tiện ích đa dạng, bao gồm trường học, không gian làm việc chung và khu thể thao, nhằm tạo ra một môi trường sống lành mạnh và tiện nghi. Với nhiều cây xanh và mặt nước, Eco Central Park hứa hẹn trở thành trung tâm văn hóa, giải trí mới tại Nghệ An.",
-    "link": "https://tuoitre.vn/song-lam-viec-giai-tri-da-the-he-tai-cong-vien-xanh-rong-lon-o-mien-trung-20250324160729873.htm",
-    "cat": "gia-dinh",
-    "positivity": 9,
-    "importance": 8,
-    "question": "Eco Central Park ở miền Trung có gì đặc biệt cho cư dân?",
-    "answers": [
-      {
-        "text": "Cung cấp không gian sống, làm việc và giải trí đa thế hệ.",
-        "correct": true
-      },
-      {
-        "text": "Chỉ có cây xanh và mặt nước.",
-        "correct": false
-      },
-      {
-        "text": "Không có trường học và khu thể thao.",
-        "correct": false
-      },
-      {
-        "text": "Là một khu đô thị nhỏ với ít tiện ích.",
-        "correct": false
-      }
-    ]
-  },
-  {
     "title": "Dấu hiệu nhận biết nốt ruồi có nguy cơ ung thư",
     "content": "Nốt ruồi có thể là dấu hiệu cảnh báo ung thư da, đặc biệt là u hắc tố ác tính. Những dấu hiệu cần lưu ý bao gồm sự bất đối xứng, bờ không đều, màu sắc bất thường và đường kính lớn hơn 6 mm. Nếu nốt ruồi biến đổi theo thời gian hoặc có triệu chứng như ngứa, đau, cần thăm khám bác sĩ ngay. Để phòng ngừa, nên tránh nắng gắt và kiểm tra da thường xuyên.",
     "link": "https://vnexpress.net/dau-hieu-nhan-biet-not-ruoi-co-nguy-co-ung-thu-4865300.html",
@@ -4183,6 +4183,33 @@
       },
       {
         "text": "Nốt ruồi không thay đổi theo thời gian.",
+        "correct": false
+      }
+    ]
+  },
+  {
+    "title": "Sống - làm việc - giải trí đa thế hệ tại công viên xanh rộng lớn ở miền Trung",
+    "content": "Công viên Eco Central Park ở miền Trung Việt Nam là khu đô thị lớn với diện tích gần 200ha, cung cấp không gian sống, làm việc và giải trí cho cư dân đa thế hệ. Dự án chú trọng vào việc phát triển không gian xanh và tiện ích đa dạng, bao gồm trường học, không gian làm việc chung và khu thể thao, nhằm tạo ra một môi trường sống lành mạnh và tiện nghi. Với nhiều cây xanh và mặt nước, Eco Central Park hứa hẹn trở thành trung tâm văn hóa, giải trí mới tại Nghệ An.",
+    "link": "https://tuoitre.vn/song-lam-viec-giai-tri-da-the-he-tai-cong-vien-xanh-rong-lon-o-mien-trung-20250324160729873.htm",
+    "cat": "gia-dinh",
+    "positivity": 9,
+    "importance": 8,
+    "question": "Eco Central Park ở miền Trung có gì đặc biệt cho cư dân?",
+    "answers": [
+      {
+        "text": "Cung cấp không gian sống, làm việc và giải trí đa thế hệ.",
+        "correct": true
+      },
+      {
+        "text": "Chỉ có cây xanh và mặt nước.",
+        "correct": false
+      },
+      {
+        "text": "Không có trường học và khu thể thao.",
+        "correct": false
+      },
+      {
+        "text": "Là một khu đô thị nhỏ với ít tiện ích.",
         "correct": false
       }
     ]
@@ -4304,33 +4331,6 @@
     ]
   },
   {
-    "title": "Đề xuất tăng dần tiền lương đóng BHXH bắt buộc cho học viên quân đội, công an",
-    "content": "Bộ Quốc phòng vừa đề xuất điều chỉnh mức tiền lương đóng bảo hiểm xã hội (BHXH) cho học viên quân đội và công an. Theo dự thảo, trong hai năm đầu, mức lương đóng BHXH sẽ bằng hai lần mức tham chiếu, sau đó tăng dần 0,5 lần mỗi năm, tối đa đạt 4 lần mức tham chiếu. Đề xuất này nhằm khắc phục hạn chế trong quyền lợi hưu trí của các quân nhân và phù hợp với Luật BHXH sửa đổi.",
-    "link": "https://vnexpress.net/de-xuat-tang-dan-tien-luong-dong-bhxh-bat-buoc-cho-hoc-vien-quan-doi-cong-an-4865318.html",
-    "cat": "phap-luat",
-    "positivity": 8,
-    "importance": 7,
-    "question": "Đề xuất mới của Bộ Quốc phòng về mức đóng BHXH bắt buộc cho học viên quân đội có gì thay đổi?",
-    "answers": [
-      {
-        "text": "Mức đóng BHXH sẽ tăng dần từ 2 lần mức tham chiếu trong hai năm đầu.",
-        "correct": true
-      },
-      {
-        "text": "Mức đóng BHXH sẽ được giữ nguyên như hiện tại.",
-        "correct": false
-      },
-      {
-        "text": "Mức đóng BHXH sẽ giảm xuống còn 1 lần mức tham chiếu.",
-        "correct": false
-      },
-      {
-        "text": "Mức đóng BHXH sẽ không thay đổi trong 5 năm tới.",
-        "correct": false
-      }
-    ]
-  },
-  {
     "title": "Cha là người Pháp, mẹ là người Việt, con có được song tịch không?",
     "content": "Con gái của bạn, sinh ra và lớn lên ở Pháp với cha là người Pháp và mẹ là người Việt, có khả năng xin nhập quốc tịch Việt Nam mà không cần thôi quốc tịch Pháp. Theo Điều 19 Luật Quốc tịch Việt Nam, nếu người xin nhập quốc tịch là con đẻ của công dân Việt Nam, họ có thể được phép nhập quốc tịch Việt Nam mà không phải đáp ứng một số điều kiện. Hồ sơ cần chuẩn bị bao gồm đơn xin nhập quốc tịch, giấy khai sinh và lý lịch tư pháp.",
     "link": "https://tuoitre.vn/cha-la-nguoi-phap-me-la-nguoi-viet-con-co-duoc-song-tich-khong-20250306121602648.htm",
@@ -4353,6 +4353,33 @@
       },
       {
         "text": "Không, cháu không đủ điều kiện để xin quốc tịch Việt Nam.",
+        "correct": false
+      }
+    ]
+  },
+  {
+    "title": "Đề xuất tăng dần tiền lương đóng BHXH bắt buộc cho học viên quân đội, công an",
+    "content": "Bộ Quốc phòng vừa đề xuất điều chỉnh mức tiền lương đóng bảo hiểm xã hội (BHXH) cho học viên quân đội và công an. Theo dự thảo, trong hai năm đầu, mức lương đóng BHXH sẽ bằng hai lần mức tham chiếu, sau đó tăng dần 0,5 lần mỗi năm, tối đa đạt 4 lần mức tham chiếu. Đề xuất này nhằm khắc phục hạn chế trong quyền lợi hưu trí của các quân nhân và phù hợp với Luật BHXH sửa đổi.",
+    "link": "https://vnexpress.net/de-xuat-tang-dan-tien-luong-dong-bhxh-bat-buoc-cho-hoc-vien-quan-doi-cong-an-4865318.html",
+    "cat": "phap-luat",
+    "positivity": 8,
+    "importance": 7,
+    "question": "Đề xuất mới của Bộ Quốc phòng về mức đóng BHXH bắt buộc cho học viên quân đội có gì thay đổi?",
+    "answers": [
+      {
+        "text": "Mức đóng BHXH sẽ tăng dần từ 2 lần mức tham chiếu trong hai năm đầu.",
+        "correct": true
+      },
+      {
+        "text": "Mức đóng BHXH sẽ được giữ nguyên như hiện tại.",
+        "correct": false
+      },
+      {
+        "text": "Mức đóng BHXH sẽ giảm xuống còn 1 lần mức tham chiếu.",
+        "correct": false
+      },
+      {
+        "text": "Mức đóng BHXH sẽ không thay đổi trong 5 năm tới.",
         "correct": false
       }
     ]
@@ -4563,28 +4590,28 @@
     ]
   },
   {
-    "title": "4 cơ chế gây ung thư của rượu bia",
-    "content": "Rượu bia có thể gây ung thư thông qua bốn cơ chế chính: làm tổn thương DNA, gây viêm nhiễm, rối loạn hormone và hỗ trợ hấp thụ các chất gây ung thư khác. Theo nghiên cứu, ngay cả việc tiêu thụ một lượng nhỏ rượu cũng có thể làm tăng nguy cơ ung thư, đặc biệt là ung thư vú do sự gia tăng nồng độ estrogen. Cựu Tổng Y sĩ Mỹ đã nhấn mạnh mối liên hệ này và kêu gọi dán nhãn cảnh báo trên các sản phẩm có cồn.",
-    "link": "https://vnexpress.net/4-co-che-gay-ung-thu-cua-ruou-bia-4865332.html",
-    "cat": "suc-khoe",
-    "positivity": 4,
-    "importance": 9,
-    "question": "Rượu bia gây ung thư qua những cơ chế nào?",
+    "title": "Trang trí lễ cưới bằng 400 chiếc bánh đặc sản và rau củ quả",
+    "content": "Lễ cưới của Lê Hồng Phước và Hồ Trần Anh Thư tại Bình Định đã gây ấn tượng với trang trí độc đáo bằng 400 chiếc bánh đặc sản và 200kg rau củ quả, thể hiện tình yêu quê hương. Họ sử dụng những giỏ tre để đựng các lễ vật như nem chả, rượu Bàu Đá và bánh truyền thống, tạo nên không khí ấm cúng và gần gũi. Cặp đôi mong muốn kể lại câu chuyện quê hương qua lễ cưới của mình, và những hình ảnh về đám cưới đã thu hút sự chú ý mạnh mẽ trên mạng xã hội.",
+    "link": "https://vnexpress.net/trang-tri-le-cuoi-bang-400-chiec-banh-dac-san-va-rau-cu-qua-4865376.html",
+    "cat": "gia-dinh",
+    "positivity": 9,
+    "importance": 7,
+    "question": "Lễ cưới của Lê Hồng Phước được trang trí bằng gì?",
     "answers": [
       {
-        "text": "Gây tổn thương DNA, viêm nhiễm, rối loạn hormone, hấp thụ chất gây ung thư khác",
+        "text": "400 chiếc bánh đặc sản và rau củ quả",
         "correct": true
       },
       {
-        "text": "Chỉ làm tăng nguy cơ béo phì",
+        "text": "1000 chiếc bánh mì",
         "correct": false
       },
       {
-        "text": "Không gây ảnh hưởng gì đến sức khỏe",
+        "text": "500 hoa tươi",
         "correct": false
       },
       {
-        "text": "Chỉ gây nghiện và không gây ung thư",
+        "text": "300 chai rượu",
         "correct": false
       }
     ]
@@ -4675,28 +4702,28 @@
     ]
   },
   {
-    "title": "Trang trí lễ cưới bằng 400 chiếc bánh đặc sản và rau củ quả",
-    "content": "Lễ cưới của Lê Hồng Phước và Hồ Trần Anh Thư tại Bình Định đã gây ấn tượng với trang trí độc đáo bằng 400 chiếc bánh đặc sản và 200kg rau củ quả, thể hiện tình yêu quê hương. Họ sử dụng những giỏ tre để đựng các lễ vật như nem chả, rượu Bàu Đá và bánh truyền thống, tạo nên không khí ấm cúng và gần gũi. Cặp đôi mong muốn kể lại câu chuyện quê hương qua lễ cưới của mình, và những hình ảnh về đám cưới đã thu hút sự chú ý mạnh mẽ trên mạng xã hội.",
-    "link": "https://vnexpress.net/trang-tri-le-cuoi-bang-400-chiec-banh-dac-san-va-rau-cu-qua-4865376.html",
-    "cat": "gia-dinh",
-    "positivity": 9,
-    "importance": 7,
-    "question": "Lễ cưới của Lê Hồng Phước được trang trí bằng gì?",
+    "title": "4 cơ chế gây ung thư của rượu bia",
+    "content": "Rượu bia có thể gây ung thư thông qua bốn cơ chế chính: làm tổn thương DNA, gây viêm nhiễm, rối loạn hormone và hỗ trợ hấp thụ các chất gây ung thư khác. Theo nghiên cứu, ngay cả việc tiêu thụ một lượng nhỏ rượu cũng có thể làm tăng nguy cơ ung thư, đặc biệt là ung thư vú do sự gia tăng nồng độ estrogen. Cựu Tổng Y sĩ Mỹ đã nhấn mạnh mối liên hệ này và kêu gọi dán nhãn cảnh báo trên các sản phẩm có cồn.",
+    "link": "https://vnexpress.net/4-co-che-gay-ung-thu-cua-ruou-bia-4865332.html",
+    "cat": "suc-khoe",
+    "positivity": 4,
+    "importance": 9,
+    "question": "Rượu bia gây ung thư qua những cơ chế nào?",
     "answers": [
       {
-        "text": "400 chiếc bánh đặc sản và rau củ quả",
+        "text": "Gây tổn thương DNA, viêm nhiễm, rối loạn hormone, hấp thụ chất gây ung thư khác",
         "correct": true
       },
       {
-        "text": "1000 chiếc bánh mì",
+        "text": "Chỉ làm tăng nguy cơ béo phì",
         "correct": false
       },
       {
-        "text": "500 hoa tươi",
+        "text": "Không gây ảnh hưởng gì đến sức khỏe",
         "correct": false
       },
       {
-        "text": "300 chai rượu",
+        "text": "Chỉ gây nghiện và không gây ung thư",
         "correct": false
       }
     ]
