--- a/home_shortnews.html
+++ b/home_shortnews.html
@@ -81,6 +81,33 @@
     // Example JSON array with news objects
     const newsData = [
   {
+    "title": "Dự kiến phương án sắp xếp phường, xã ở TP HCM",
+    "content": "Dự kiến phương án sắp xếp phường, xã ở TP HCM cho thấy quận Bình Thạnh đề xuất giảm từ 15 phường xuống còn 4 phường, trong khi quận 1 dự kiến lập 2 phường mới từ 10 phường cũ. Các địa danh lịch sử như Bến Thành, Bến Nghé sẽ được giữ lại trong quá trình sắp xếp. Các quận khác như Gò Vấp, Phú Nhuận cũng đang trình phương án giảm số lượng phường, xã để phù hợp với quyết định của Bộ Chính trị.",
+    "link": "https://vnexpress.net/du-kien-phuong-an-sap-xep-phuong-xa-o-tp-hcm-4865782.html",
+    "cat": "thoi-su",
+    "positivity": 7,
+    "importance": 8,
+    "question": "Phương án sắp xếp phường, xã ở TP HCM dự kiến sẽ như thế nào?",
+    "answers": [
+      {
+        "text": "Giảm số lượng phường, xã từ 273 xuống còn hơn 80.",
+        "correct": true
+      },
+      {
+        "text": "Tăng số lượng phường, xã lên 300.",
+        "correct": false
+      },
+      {
+        "text": "Giữ nguyên số lượng phường, xã hiện tại.",
+        "correct": false
+      },
+      {
+        "text": "Sáp nhập tất cả các phường thành một đơn vị duy nhất.",
+        "correct": false
+      }
+    ]
+  },
+  {
     "title": "Ukraine lên tiếng sau khi Nga - Mỹ công bố nội dung đàm phán",
     "content": "Tổng thống Ukraine Volodymyr Zelensky đã phát biểu sau khi Nga và Mỹ công bố nội dung đàm phán về xung đột Ukraine tại Ả rập Xê út. Ukraine đã đưa ra danh sách các cơ sở năng lượng cần được bảo vệ khỏi các cuộc tấn công. Zelensky nhấn mạnh rằng đề xuất của Mỹ về việc kiềm chế tấn công vào cơ sở hạ tầng năng lượng của hai nước phản ánh sự đồng thuận trong việc không nhắm vào nhau. Các bên đã đồng ý về một lệnh ngừng bắn ở Biển Đen và cấm tấn công vào cơ sở hạ tầng năng lượng của nhau.",
     "link": "https://dantri.com.vn/the-gioi/ukraine-len-tieng-sau-khi-nga-my-cong-bo-noi-dung-dam-phan-20250326000639315.htm",
@@ -626,32 +653,28 @@
     ]
   },
   {
-    "title": "Doãn Hải My thu hút ánh nhìn với phong cách nữ tính",
-    "content": "Doãn Hải My, vợ cầu thủ Đoàn Văn Hậu, đã thu hút được sự chú ý của giới mộ điệu thời trang với phong cách nữ tính và hiện đại. Cô đã phối đồ và lựa chọn túi xách theo xu hướng thời trang đang được ưa chuộng toàn cầu, đặc biệt là các mẫu túi mini. Thiết kế trang phục của cô mang đậm dấu ấn cá tính và thanh lịch, phù hợp với xu hướng mùa xuân hè năm nay.",
-    "link": "https://dantri.com.vn/giai-tri/doan-hai-my-thu-hut-anh-nhin-voi-phong-cach-nu-tinh-20250324173039479.htm",
-    "cat": "giai-tri",
-    "positivity": 9,
+    "title": "Sếp Xiaomi thả dưa hấu từ tầng 6 chứng minh độ bền pin xe điện",
+    "content": "Giám đốc điều hành Xiaomi, Lei Jun, đã thực hiện một thử nghiệm thú vị để chứng minh độ bền của pin xe điện bằng cách thả một quả dưa hấu từ tầng 6 của nhà máy. Kết quả cho thấy quả dưa hấu không bị vỡ nhờ vào lớp bảo vệ 'áo giáp chống đạn' mà Xiaomi áp dụng cho pin xe điện SU7 Ultra. Công nghệ này giúp tăng cường độ bền và an toàn cho pin, với nhiều biện pháp bảo vệ như khung thép cường độ cao và hệ thống quản lý pin thông minh.",
+    "link": "https://vnexpress.net/sep-xiaomi-tha-dua-hau-tu-tang-6-chung-minh-do-ben-pin-xe-dien-4865604.html",
+    "cat": "oto-xe-may",
+    "positivity": 8,
     "importance": 7,
-    "question": "Doãn Hải My thu hút sự chú ý với phong cách gì?",
+    "question": "Tại sao Lei Jun lại thả dưa hấu từ tầng 6 của nhà máy?",
     "answers": [
       {
-        "text": "Phong cách nữ tính",
+        "text": "Để chứng minh độ bền của pin xe điện.",
         "correct": true
       },
       {
-        "text": "Phong cách nam tính",
+        "text": "Để thử nghiệm độ an toàn của ô tô.",
         "correct": false
       },
       {
-        "text": "Phong cách thể thao",
+        "text": "Để quảng bá sản phẩm mới.",
         "correct": false
       },
       {
-        "text": "Phong cách truyền thống",
-        "correct": false
-      },
-      {
-        "text": "Phong cách công sở",
+        "text": "Để tạo sự chú ý cho truyền thông.",
         "correct": false
       }
     ]
@@ -711,28 +734,32 @@
     ]
   },
   {
-    "title": "Sếp Xiaomi thả dưa hấu từ tầng 6 chứng minh độ bền pin xe điện",
-    "content": "Giám đốc điều hành Xiaomi, Lei Jun, đã thực hiện một thử nghiệm thú vị để chứng minh độ bền của pin xe điện bằng cách thả một quả dưa hấu từ tầng 6 của nhà máy. Kết quả cho thấy quả dưa hấu không bị vỡ nhờ vào lớp bảo vệ 'áo giáp chống đạn' mà Xiaomi áp dụng cho pin xe điện SU7 Ultra. Công nghệ này giúp tăng cường độ bền và an toàn cho pin, với nhiều biện pháp bảo vệ như khung thép cường độ cao và hệ thống quản lý pin thông minh.",
-    "link": "https://vnexpress.net/sep-xiaomi-tha-dua-hau-tu-tang-6-chung-minh-do-ben-pin-xe-dien-4865604.html",
-    "cat": "oto-xe-may",
-    "positivity": 8,
+    "title": "Doãn Hải My thu hút ánh nhìn với phong cách nữ tính",
+    "content": "Doãn Hải My, vợ cầu thủ Đoàn Văn Hậu, đã thu hút được sự chú ý của giới mộ điệu thời trang với phong cách nữ tính và hiện đại. Cô đã phối đồ và lựa chọn túi xách theo xu hướng thời trang đang được ưa chuộng toàn cầu, đặc biệt là các mẫu túi mini. Thiết kế trang phục của cô mang đậm dấu ấn cá tính và thanh lịch, phù hợp với xu hướng mùa xuân hè năm nay.",
+    "link": "https://dantri.com.vn/giai-tri/doan-hai-my-thu-hut-anh-nhin-voi-phong-cach-nu-tinh-20250324173039479.htm",
+    "cat": "giai-tri",
+    "positivity": 9,
     "importance": 7,
-    "question": "Tại sao Lei Jun lại thả dưa hấu từ tầng 6 của nhà máy?",
+    "question": "Doãn Hải My thu hút sự chú ý với phong cách gì?",
     "answers": [
       {
-        "text": "Để chứng minh độ bền của pin xe điện.",
+        "text": "Phong cách nữ tính",
         "correct": true
       },
       {
-        "text": "Để thử nghiệm độ an toàn của ô tô.",
+        "text": "Phong cách nam tính",
         "correct": false
       },
       {
-        "text": "Để quảng bá sản phẩm mới.",
+        "text": "Phong cách thể thao",
         "correct": false
       },
       {
-        "text": "Để tạo sự chú ý cho truyền thông.",
+        "text": "Phong cách truyền thống",
+        "correct": false
+      },
+      {
+        "text": "Phong cách công sở",
         "correct": false
       }
     ]
@@ -858,37 +885,6 @@
     ]
   },
   {
-    "title": "U22 Trung Quốc - U22 Việt Nam: Viktor Lê đá chính",
-    "content": "U22 Việt Nam sẽ gặp U22 Trung Quốc trong trận giao hữu cuối cùng tại giải Tứ Hùng Diêm Thành. Viktor Lê được chọn đá chính trong đội hình xuất phát. Nếu Việt Nam thắng trận này, họ sẽ giành chức vô địch giải đấu, trong khi Trung Quốc hiện đang dẫn đầu với 4 điểm. Đây là trận đấu quyết định cho ngôi vô địch, với sự tham gia của bốn đội gồm Việt Nam, Trung Quốc, Hàn Quốc và Uzbekistan.",
-    "link": "https://vnexpress.net/truc-tiep-bong-da-u22-trung-quoc-vs-u22-viet-nam-4865729.html",
-    "cat": "the-thao",
-    "positivity": 8,
-    "importance": 9,
-    "question": "U22 Việt Nam có thể vô địch nếu thắng đội nào?",
-    "answers": [
-      {
-        "text": "U22 Trung Quốc",
-        "correct": true
-      },
-      {
-        "text": "U22 Hàn Quốc",
-        "correct": false
-      },
-      {
-        "text": "U22 Uzbekistan",
-        "correct": false
-      },
-      {
-        "text": "U22 Nhật Bản",
-        "correct": false
-      },
-      {
-        "text": "U22 Ấn Độ",
-        "correct": false
-      }
-    ]
-  },
-  {
     "title": "Những thực phẩm lên men giúp tóc chắc khỏe",
     "content": "Thực phẩm lên men như sữa chua, kim chi và các sản phẩm từ đậu nành có tác dụng tốt cho sức khỏe tóc. Chúng cung cấp lợi khuẩn, vitamin B và chất chống oxy hóa, giúp nuôi dưỡng da đầu và thúc đẩy tóc mọc khỏe. Bác sĩ Hoàng Quyết Tiến cho biết, các lợi khuẩn này giúp cân bằng hệ vi sinh trên da đầu, ngăn ngừa gàu và viêm nhiễm, từ đó tạo điều kiện cho tóc phát triển tốt hơn. Tuy nhiên, cần sử dụng thực phẩm lên men một cách hợp lý để tránh ảnh hưởng xấu đến sức khỏe.",
     "link": "https://vnexpress.net/nhung-thuc-pham-len-men-giup-toc-chac-khoe-4865722.html",
@@ -915,6 +911,37 @@
       },
       {
         "text": "Chỉ dưa cải muối",
+        "correct": false
+      }
+    ]
+  },
+  {
+    "title": "U22 Trung Quốc - U22 Việt Nam: Viktor Lê đá chính",
+    "content": "U22 Việt Nam sẽ gặp U22 Trung Quốc trong trận giao hữu cuối cùng tại giải Tứ Hùng Diêm Thành. Viktor Lê được chọn đá chính trong đội hình xuất phát. Nếu Việt Nam thắng trận này, họ sẽ giành chức vô địch giải đấu, trong khi Trung Quốc hiện đang dẫn đầu với 4 điểm. Đây là trận đấu quyết định cho ngôi vô địch, với sự tham gia của bốn đội gồm Việt Nam, Trung Quốc, Hàn Quốc và Uzbekistan.",
+    "link": "https://vnexpress.net/truc-tiep-bong-da-u22-trung-quoc-vs-u22-viet-nam-4865729.html",
+    "cat": "the-thao",
+    "positivity": 8,
+    "importance": 9,
+    "question": "U22 Việt Nam có thể vô địch nếu thắng đội nào?",
+    "answers": [
+      {
+        "text": "U22 Trung Quốc",
+        "correct": true
+      },
+      {
+        "text": "U22 Hàn Quốc",
+        "correct": false
+      },
+      {
+        "text": "U22 Uzbekistan",
+        "correct": false
+      },
+      {
+        "text": "U22 Nhật Bản",
+        "correct": false
+      },
+      {
+        "text": "U22 Ấn Độ",
         "correct": false
       }
     ]
@@ -1086,33 +1113,6 @@
     ]
   },
   {
-    "title": "Cách làm món cà chua nhồi thịt",
-    "content": "Món cà chua nhồi thịt là một món ăn ngon, dễ làm và phù hợp với khẩu vị của trẻ nhỏ và người già. Nguyên liệu chính bao gồm cà chua, thịt nạc vai, mộc nhĩ và các gia vị khác. Quy trình chế biến bao gồm sơ chế cà chua, ướp thịt, nhồi nhân vào cà chua và nấu chín bằng nhiều phương pháp khác nhau như rán, nướng hoặc chiên không dầu. Thành phẩm là món cà chua nhồi thịt giữ nguyên hình dáng, có thịt mềm ngọt và sốt cà chua mịn màng.",
-    "link": "https://vnexpress.net/cach-lam-mon-ca-chua-nhoi-thit-4865726.html",
-    "cat": "gia-dinh",
-    "positivity": 9,
-    "importance": 7,
-    "question": "Cà chua nhồi thịt được làm từ những nguyên liệu gì?",
-    "answers": [
-      {
-        "text": "Cà chua, thịt nạc vai, mộc nhĩ",
-        "correct": true
-      },
-      {
-        "text": "Cà rốt, thịt bò, nấm hương",
-        "correct": false
-      },
-      {
-        "text": "Cà chua, tôm, rau cần",
-        "correct": false
-      },
-      {
-        "text": "Thịt gà, khoai tây, hành tây",
-        "correct": false
-      }
-    ]
-  },
-  {
     "title": "Kháng insulin gây mụn trứng cá thế nào",
     "content": "Kháng insulin có thể làm tăng mức độ hormone androgen trong cơ thể, từ đó thúc đẩy tăng tiết bã nhờn và làm nặng thêm tình trạng mụn trứng cá. Tình trạng này thường gặp ở thanh thiếu niên và người lớn, gây ra bởi sự tích tụ đường trong máu và kích thích các tuyến sản xuất hormone. Đặc biệt, kháng insulin còn liên quan đến viêm mạn tính, làm cho tình trạng mụn trở nên nghiêm trọng hơn, đặc biệt là ở phụ nữ có hội chứng buồng trứng đa nang (PCOS). Để điều trị, cần kết hợp giữa phương pháp da liễu và thay đổi lối sống, bao gồm chế độ ăn uống lành mạnh.",
     "link": "https://vnexpress.net/khang-insulin-gay-mun-trung-ca-the-nao-4865724.html",
@@ -1135,6 +1135,33 @@
       },
       {
         "text": "Kháng insulin làm giảm bã nhờn trên da.",
+        "correct": false
+      }
+    ]
+  },
+  {
+    "title": "Cách làm món cà chua nhồi thịt",
+    "content": "Món cà chua nhồi thịt là một món ăn ngon, dễ làm và phù hợp với khẩu vị của trẻ nhỏ và người già. Nguyên liệu chính bao gồm cà chua, thịt nạc vai, mộc nhĩ và các gia vị khác. Quy trình chế biến bao gồm sơ chế cà chua, ướp thịt, nhồi nhân vào cà chua và nấu chín bằng nhiều phương pháp khác nhau như rán, nướng hoặc chiên không dầu. Thành phẩm là món cà chua nhồi thịt giữ nguyên hình dáng, có thịt mềm ngọt và sốt cà chua mịn màng.",
+    "link": "https://vnexpress.net/cach-lam-mon-ca-chua-nhoi-thit-4865726.html",
+    "cat": "gia-dinh",
+    "positivity": 9,
+    "importance": 7,
+    "question": "Cà chua nhồi thịt được làm từ những nguyên liệu gì?",
+    "answers": [
+      {
+        "text": "Cà chua, thịt nạc vai, mộc nhĩ",
+        "correct": true
+      },
+      {
+        "text": "Cà rốt, thịt bò, nấm hương",
+        "correct": false
+      },
+      {
+        "text": "Cà chua, tôm, rau cần",
+        "correct": false
+      },
+      {
+        "text": "Thịt gà, khoai tây, hành tây",
         "correct": false
       }
     ]
@@ -4374,33 +4401,6 @@
     ]
   },
   {
-    "title": "Xe bán  tải Mỹ bị lo ngại gây ô nhiễm môi trường ở Đức",
-    "content": "Tổ chức Hành động Môi trường Đức (DUH) đã khởi kiện Cục Giao thông vận tải liên bang Đức nhằm yêu cầu công bố dữ liệu về xe bán tải Mỹ, cho rằng dòng xe này gây ô nhiễm nghiêm trọng và không đáp ứng các tiêu chuẩn an toàn của EU. Xe bán tải cỡ lớn như Ford F-Series và Ram phát thải CO2 cao gấp 9 lần so với xe châu Âu thông thường. DUH cảnh báo rằng việc cho phép các xe này hoạt động mà không tuân thủ quy định có thể dẫn đến thiệt hại lớn cho môi trường và gia tăng tai nạn giao thông.",
-    "link": "https://vnexpress.net/xe-ban-tai-my-bi-lo-ngai-gay-o-nhiem-moi-truong-o-duc-4864995.html",
-    "cat": "thoi-su",
-    "positivity": 4,
-    "importance": 7,
-    "question": "Tại sao xe bán tải Mỹ bị lo ngại ở Đức?",
-    "answers": [
-      {
-        "text": "Vì chúng gây ô nhiễm môi trường nghiêm trọng.",
-        "correct": true
-      },
-      {
-        "text": "Vì chúng rất phổ biến ở châu Âu.",
-        "correct": false
-      },
-      {
-        "text": "Vì chúng đẹp hơn xe châu Âu.",
-        "correct": false
-      },
-      {
-        "text": "Vì chúng có giá rẻ hơn xe châu Âu.",
-        "correct": false
-      }
-    ]
-  },
-  {
     "title": "6 năm vừa làm vừa học, chàng trai 9X ẵm trọn học bổng tiến sĩ 15 tỷ đồng",
     "content": "Đặng Võ Hiệp, chàng trai 9X đến từ TP.HCM, đã xuất sắc giành học bổng tiến sĩ toàn phần trị giá 15 tỷ đồng từ Đại học Virginia và Đại học Missouri (Mỹ) sau 6 năm vừa làm vừa học. Trước đó, Hiệp đã có hai tấm bằng thạc sĩ từ Anh và Mỹ, cùng với kinh nghiệm làm việc trong lĩnh vực phân tích dữ liệu. Hướng nghiên cứu của Hiệp tập trung vào ứng dụng trí tuệ nhân tạo và học máy trong việc dự đoán thời tiết cực đoan và phòng tránh thiên tai.",
     "link": "https://dantri.com.vn/giao-duc/6-nam-vua-lam-vua-hoc-chang-trai-9x-am-tron-hoc-bong-tien-si-15-ty-dong-20250323204410785.htm",
@@ -4508,6 +4508,33 @@
       },
       {
         "text": "300 chai rượu",
+        "correct": false
+      }
+    ]
+  },
+  {
+    "title": "Xe bán  tải Mỹ bị lo ngại gây ô nhiễm môi trường ở Đức",
+    "content": "Tổ chức Hành động Môi trường Đức (DUH) đã khởi kiện Cục Giao thông vận tải liên bang Đức nhằm yêu cầu công bố dữ liệu về xe bán tải Mỹ, cho rằng dòng xe này gây ô nhiễm nghiêm trọng và không đáp ứng các tiêu chuẩn an toàn của EU. Xe bán tải cỡ lớn như Ford F-Series và Ram phát thải CO2 cao gấp 9 lần so với xe châu Âu thông thường. DUH cảnh báo rằng việc cho phép các xe này hoạt động mà không tuân thủ quy định có thể dẫn đến thiệt hại lớn cho môi trường và gia tăng tai nạn giao thông.",
+    "link": "https://vnexpress.net/xe-ban-tai-my-bi-lo-ngai-gay-o-nhiem-moi-truong-o-duc-4864995.html",
+    "cat": "thoi-su",
+    "positivity": 4,
+    "importance": 7,
+    "question": "Tại sao xe bán tải Mỹ bị lo ngại ở Đức?",
+    "answers": [
+      {
+        "text": "Vì chúng gây ô nhiễm môi trường nghiêm trọng.",
+        "correct": true
+      },
+      {
+        "text": "Vì chúng rất phổ biến ở châu Âu.",
+        "correct": false
+      },
+      {
+        "text": "Vì chúng đẹp hơn xe châu Âu.",
+        "correct": false
+      },
+      {
+        "text": "Vì chúng có giá rẻ hơn xe châu Âu.",
         "correct": false
       }
     ]
