Batch update of generated files

--- a/home.html
+++ b/home.html
@@ -148,6 +148,33 @@
     // Replace this with your actual news data.
     const newsData = [
   {
+    "title": "Malaysia đứng sau Việt Nam ở vòng loại Asian Cup",
+    "content": "Malaysia đã có một chiến thắng 2-0 trước Nepal trong lượt ra quân của vòng loại cuối Asian Cup 2027, nhưng vẫn đứng sau Việt Nam ở bảng F do kém hiệu số bàn thắng bại. Hai cầu thủ ghi bàn cho Malaysia là Hevel và Corbin-Ong. Trận đấu này đánh dấu sự ra mắt của tân HLV Peter Cklamovski và cho thấy sự khác biệt trong đội hình so với giải ASEAN Cup trước đó. Malaysia và Việt Nam đều có 3 điểm, nhưng Malaysia xếp thứ hai do hiệu số kém hơn.",
+    "link": "https://vnexpress.net/malaysia-dung-sau-viet-nam-o-vong-loai-asian-cup-4865858.html",
+    "cat": "the-thao",
+    "positivity": 7,
+    "importance": 8,
+    "question": "Malaysia xếp sau đội nào ở vòng loại Asian Cup 2027?",
+    "answers": [
+      {
+        "text": "Việt Nam",
+        "correct": true
+      },
+      {
+        "text": "Nepal",
+        "correct": false
+      },
+      {
+        "text": "Thái Lan",
+        "correct": false
+      },
+      {
+        "text": "Indonesia",
+        "correct": false
+      }
+    ]
+  },
+  {
     "title": "Real tiến sát việc tuyển mộ Alexander‑Arnold",
     "content": "Real Madrid đã đạt thỏa thuận cá nhân với Trent Alexander-Arnold và dự kiến sẽ chiêu mộ cầu thủ này từ Liverpool theo dạng cầu thủ tự do vào hè 2025. Alexander-Arnold sẽ nhận mức lương 310.000 USD mỗi tuần, cao hơn so với thu nhập hiện tại ở Liverpool. Tuy nhiên, thương vụ vẫn chưa hoàn tất và cần thông báo cho Liverpool khi hoàn tất. Alexander-Arnold đã có một sự nghiệp ấn tượng tại Liverpool, nhưng hiện tại đang cân nhắc khả năng chuyển đến Real Madrid.",
     "link": "https://vnexpress.net/real-tien-sat-viec-tuyen-mo-alexander-arnold-4865860.html",
@@ -368,37 +395,6 @@
     ]
   },
   {
-    "title": "Cố đô Huế những ngày giải phóng 50 năm trước",
-    "content": "Ngày 25/3/1975, lá cờ của Quân Giải phóng miền Nam Việt Nam đã được cắm trên Kỳ đài, đánh dấu sự giải phóng hoàn toàn của cố đô Huế. Chiến dịch Huế - Đà Nẵng được thực hiện sau khi giải phóng Buôn Ma Thuột, với mục tiêu giải phóng các thành phố quan trọng này. Sau 50 năm, Huế đã trở thành một đô thị di sản hàng đầu của Việt Nam với 8 di sản văn hóa thế giới được UNESCO công nhận.",
-    "link": "https://vnexpress.net/co-do-hue-nhung-ngay-giai-phong-50-nam-truoc-4865641.html",
-    "cat": "thoi-su",
-    "positivity": 8,
-    "importance": 9,
-    "question": "Huế được giải phóng vào ngày nào trong năm 1975?",
-    "answers": [
-      {
-        "text": "25/3/1975",
-        "correct": true
-      },
-      {
-        "text": "26/3/1975",
-        "correct": false
-      },
-      {
-        "text": "15/5/1975",
-        "correct": false
-      },
-      {
-        "text": "1/1/2025",
-        "correct": false
-      },
-      {
-        "text": "20/4/1975",
-        "correct": false
-      }
-    ]
-  },
-  {
     "title": "Sáp nhập tỉnh thành nên dựa vào nguyên tắc nào?",
     "content": "Chuyên gia đề xuất các nguyên tắc sáp nhập tỉnh thành tại Việt Nam, tập trung vào việc tăng số lượng địa phương có biển, nâng cao sức mạnh kinh tế và đảm bảo an ninh quốc phòng. Việc sáp nhập nhằm giảm số lượng đơn vị hành chính cấp tỉnh từ 63 xuống còn khoảng một nửa, đồng thời tạo động lực phát triển bền vững cho các địa phương. Các tiêu chí sáp nhập không chỉ dựa vào quy mô dân số và diện tích mà còn cần nghiên cứu kỹ lưỡng về quy hoạch tổng thể và chiến lược phát triển kinh tế xã hội.",
     "link": "https://vnexpress.net/sap-nhap-tinh-thanh-nen-dua-vao-nguyen-tac-nao-4865684.html",
@@ -425,6 +421,37 @@
       },
       {
         "text": "Tạo ra nhiều đơn vị hành chính mới",
+        "correct": false
+      }
+    ]
+  },
+  {
+    "title": "Cố đô Huế những ngày giải phóng 50 năm trước",
+    "content": "Ngày 25/3/1975, lá cờ của Quân Giải phóng miền Nam Việt Nam đã được cắm trên Kỳ đài, đánh dấu sự giải phóng hoàn toàn của cố đô Huế. Chiến dịch Huế - Đà Nẵng được thực hiện sau khi giải phóng Buôn Ma Thuột, với mục tiêu giải phóng các thành phố quan trọng này. Sau 50 năm, Huế đã trở thành một đô thị di sản hàng đầu của Việt Nam với 8 di sản văn hóa thế giới được UNESCO công nhận.",
+    "link": "https://vnexpress.net/co-do-hue-nhung-ngay-giai-phong-50-nam-truoc-4865641.html",
+    "cat": "thoi-su",
+    "positivity": 8,
+    "importance": 9,
+    "question": "Huế được giải phóng vào ngày nào trong năm 1975?",
+    "answers": [
+      {
+        "text": "25/3/1975",
+        "correct": true
+      },
+      {
+        "text": "26/3/1975",
+        "correct": false
+      },
+      {
+        "text": "15/5/1975",
+        "correct": false
+      },
+      {
+        "text": "1/1/2025",
+        "correct": false
+      },
+      {
+        "text": "20/4/1975",
         "correct": false
       }
     ]
@@ -510,33 +537,6 @@
       },
       {
         "text": "Do không có đủ vốn đầu tư.",
-        "correct": false
-      }
-    ]
-  },
-  {
-    "title": "HLV Kim Sang-sik vẫn tiếc dù thắng đậm Lào",
-    "content": "HLV Kim Sang-sik đã bày tỏ sự tiếc nuối dù Việt Nam giành chiến thắng 5-0 trước Lào trong trận ra quân bảng F vòng loại Asian Cup 2027. Ông cảm thấy rằng trận đấu diễn ra hoàn hảo nhưng không thể tạo cơ hội cho nhiều cầu thủ dự bị vào sân. Trong trận đấu, Nguyễn Văn Vĩ đã tỏa sáng với hai bàn thắng và được bình chọn là cầu thủ xuất sắc nhất trận. Chiến thắng giúp Việt Nam dẫn đầu bảng F và hướng tới trận đấu tiếp theo với Malaysia.",
-    "link": "https://vnexpress.net/hlv-kim-sang-sik-van-tiec-du-thang-dam-lao-4865845.html",
-    "cat": "the-thao",
-    "positivity": 8,
-    "importance": 7,
-    "question": "Tại sao HLV Kim Sang-sik cảm thấy tiếc nuối sau chiến thắng trước Lào?",
-    "answers": [
-      {
-        "text": "Vì không thể tạo cơ hội cho nhiều cầu thủ dự bị vào sân",
-        "correct": true
-      },
-      {
-        "text": "Vì trận đấu không diễn ra như mong đợi",
-        "correct": false
-      },
-      {
-        "text": "Vì đội không ghi đủ bàn thắng",
-        "correct": false
-      },
-      {
-        "text": "Vì bị chấn thương cầu thủ chủ chốt",
         "correct": false
       }
     ]
@@ -3073,6 +3073,33 @@
     ]
   },
   {
+    "title": "Hai tháng nỗ lực cứu người nhiễm trùng nặng van tim",
+    "content": "Trong suốt hai tháng, anh Thọ, 46 tuổi, đã trải qua cuộc chiến với viêm nội tâm mạc nhiễm trùng nặng do khối sùi trên van hai lá. Bệnh nhân đã từ chối phẫu thuật trong 12 năm qua và chỉ uống thuốc khi có triệu chứng. Khi viêm nhiễm tiến triển, anh đã được phẫu thuật thay van hai lá nhân tạo và sau đó theo dõi điều trị. Hiện tại, tình trạng sức khỏe của anh đã ổn định, không còn triệu chứng và đã xuất viện.",
+    "link": "https://vnexpress.net/hai-thang-no-luc-cuu-nguoi-nhiem-trung-nang-van-tim-4864905.html",
+    "cat": "suc-khoe",
+    "positivity": 8,
+    "importance": 7,
+    "question": "Anh Thọ đã trải qua điều trị gì để phục hồi sức khỏe?",
+    "answers": [
+      {
+        "text": "Phẫu thuật thay van hai lá nhân tạo",
+        "correct": true
+      },
+      {
+        "text": "Chỉ uống thuốc kháng sinh",
+        "correct": false
+      },
+      {
+        "text": "Điều trị bằng thuốc đông y",
+        "correct": false
+      },
+      {
+        "text": "Không cần điều trị gì cả",
+        "correct": false
+      }
+    ]
+  },
+  {
     "title": "Bé sơ sinh tắc ruột",
     "content": "Bé Minh, một trong hai bé song sinh, bị tắc ruột do dị ứng sữa công thức và phải nhập viện cấp cứu. Sau khi được điều trị, bác sĩ đã thực hiện phẫu thuật mở hậu môn tạm và sau một tháng, bé được phẫu thuật đóng lại. Tắc ruột ở trẻ sơ sinh là tình trạng cần được cấp cứu kịp thời, thường do lồng ruột hoặc các vấn đề khác về tiêu hóa. Các bác sĩ khuyến cáo nên cho trẻ bú sữa mẹ hoàn toàn trong 6 tháng đầu đời để giảm nguy cơ tắc ruột.",
     "link": "https://vnexpress.net/be-so-sinh-tac-ruot-4865383.html",
@@ -3099,33 +3126,6 @@
       },
       {
         "text": "Tiêu chảy cấp",
-        "correct": false
-      }
-    ]
-  },
-  {
-    "title": "Hai tháng nỗ lực cứu người nhiễm trùng nặng van tim",
-    "content": "Trong suốt hai tháng, anh Thọ, 46 tuổi, đã trải qua cuộc chiến với viêm nội tâm mạc nhiễm trùng nặng do khối sùi trên van hai lá. Bệnh nhân đã từ chối phẫu thuật trong 12 năm qua và chỉ uống thuốc khi có triệu chứng. Khi viêm nhiễm tiến triển, anh đã được phẫu thuật thay van hai lá nhân tạo và sau đó theo dõi điều trị. Hiện tại, tình trạng sức khỏe của anh đã ổn định, không còn triệu chứng và đã xuất viện.",
-    "link": "https://vnexpress.net/hai-thang-no-luc-cuu-nguoi-nhiem-trung-nang-van-tim-4864905.html",
-    "cat": "suc-khoe",
-    "positivity": 8,
-    "importance": 7,
-    "question": "Anh Thọ đã trải qua điều trị gì để phục hồi sức khỏe?",
-    "answers": [
-      {
-        "text": "Phẫu thuật thay van hai lá nhân tạo",
-        "correct": true
-      },
-      {
-        "text": "Chỉ uống thuốc kháng sinh",
-        "correct": false
-      },
-      {
-        "text": "Điều trị bằng thuốc đông y",
-        "correct": false
-      },
-      {
-        "text": "Không cần điều trị gì cả",
         "correct": false
       }
     ]
@@ -4294,33 +4294,6 @@
     ]
   },
   {
-    "title": "Đề xuất tăng dần tiền lương đóng BHXH bắt buộc cho học viên quân đội, công an",
-    "content": "Bộ Quốc phòng vừa đề xuất điều chỉnh mức tiền lương đóng bảo hiểm xã hội (BHXH) cho học viên quân đội và công an. Theo dự thảo, trong hai năm đầu, mức lương đóng BHXH sẽ bằng hai lần mức tham chiếu, sau đó tăng dần 0,5 lần mỗi năm, tối đa đạt 4 lần mức tham chiếu. Đề xuất này nhằm khắc phục hạn chế trong quyền lợi hưu trí của các quân nhân và phù hợp với Luật BHXH sửa đổi.",
-    "link": "https://vnexpress.net/de-xuat-tang-dan-tien-luong-dong-bhxh-bat-buoc-cho-hoc-vien-quan-doi-cong-an-4865318.html",
-    "cat": "phap-luat",
-    "positivity": 8,
-    "importance": 7,
-    "question": "Đề xuất mới của Bộ Quốc phòng về mức đóng BHXH bắt buộc cho học viên quân đội có gì thay đổi?",
-    "answers": [
-      {
-        "text": "Mức đóng BHXH sẽ tăng dần từ 2 lần mức tham chiếu trong hai năm đầu.",
-        "correct": true
-      },
-      {
-        "text": "Mức đóng BHXH sẽ được giữ nguyên như hiện tại.",
-        "correct": false
-      },
-      {
-        "text": "Mức đóng BHXH sẽ giảm xuống còn 1 lần mức tham chiếu.",
-        "correct": false
-      },
-      {
-        "text": "Mức đóng BHXH sẽ không thay đổi trong 5 năm tới.",
-        "correct": false
-      }
-    ]
-  },
-  {
     "title": "Cha là người Pháp, mẹ là người Việt, con có được song tịch không?",
     "content": "Con gái của bạn, sinh ra và lớn lên ở Pháp với cha là người Pháp và mẹ là người Việt, có khả năng xin nhập quốc tịch Việt Nam mà không cần thôi quốc tịch Pháp. Theo Điều 19 Luật Quốc tịch Việt Nam, nếu người xin nhập quốc tịch là con đẻ của công dân Việt Nam, họ có thể được phép nhập quốc tịch Việt Nam mà không phải đáp ứng một số điều kiện. Hồ sơ cần chuẩn bị bao gồm đơn xin nhập quốc tịch, giấy khai sinh và lý lịch tư pháp.",
     "link": "https://tuoitre.vn/cha-la-nguoi-phap-me-la-nguoi-viet-con-co-duoc-song-tich-khong-20250306121602648.htm",
@@ -4343,6 +4316,33 @@
       },
       {
         "text": "Không, cháu không đủ điều kiện để xin quốc tịch Việt Nam.",
+        "correct": false
+      }
+    ]
+  },
+  {
+    "title": "Đề xuất tăng dần tiền lương đóng BHXH bắt buộc cho học viên quân đội, công an",
+    "content": "Bộ Quốc phòng vừa đề xuất điều chỉnh mức tiền lương đóng bảo hiểm xã hội (BHXH) cho học viên quân đội và công an. Theo dự thảo, trong hai năm đầu, mức lương đóng BHXH sẽ bằng hai lần mức tham chiếu, sau đó tăng dần 0,5 lần mỗi năm, tối đa đạt 4 lần mức tham chiếu. Đề xuất này nhằm khắc phục hạn chế trong quyền lợi hưu trí của các quân nhân và phù hợp với Luật BHXH sửa đổi.",
+    "link": "https://vnexpress.net/de-xuat-tang-dan-tien-luong-dong-bhxh-bat-buoc-cho-hoc-vien-quan-doi-cong-an-4865318.html",
+    "cat": "phap-luat",
+    "positivity": 8,
+    "importance": 7,
+    "question": "Đề xuất mới của Bộ Quốc phòng về mức đóng BHXH bắt buộc cho học viên quân đội có gì thay đổi?",
+    "answers": [
+      {
+        "text": "Mức đóng BHXH sẽ tăng dần từ 2 lần mức tham chiếu trong hai năm đầu.",
+        "correct": true
+      },
+      {
+        "text": "Mức đóng BHXH sẽ được giữ nguyên như hiện tại.",
+        "correct": false
+      },
+      {
+        "text": "Mức đóng BHXH sẽ giảm xuống còn 1 lần mức tham chiếu.",
+        "correct": false
+      },
+      {
+        "text": "Mức đóng BHXH sẽ không thay đổi trong 5 năm tới.",
         "correct": false
       }
     ]
@@ -4526,6 +4526,33 @@
     ]
   },
   {
+    "title": "Xe bán  tải Mỹ bị lo ngại gây ô nhiễm môi trường ở Đức",
+    "content": "Tổ chức Hành động Môi trường Đức (DUH) đã khởi kiện Cục Giao thông vận tải liên bang Đức nhằm yêu cầu công bố dữ liệu về xe bán tải Mỹ, cho rằng dòng xe này gây ô nhiễm nghiêm trọng và không đáp ứng các tiêu chuẩn an toàn của EU. Xe bán tải cỡ lớn như Ford F-Series và Ram phát thải CO2 cao gấp 9 lần so với xe châu Âu thông thường. DUH cảnh báo rằng việc cho phép các xe này hoạt động mà không tuân thủ quy định có thể dẫn đến thiệt hại lớn cho môi trường và gia tăng tai nạn giao thông.",
+    "link": "https://vnexpress.net/xe-ban-tai-my-bi-lo-ngai-gay-o-nhiem-moi-truong-o-duc-4864995.html",
+    "cat": "thoi-su",
+    "positivity": 4,
+    "importance": 7,
+    "question": "Tại sao xe bán tải Mỹ bị lo ngại ở Đức?",
+    "answers": [
+      {
+        "text": "Vì chúng gây ô nhiễm môi trường nghiêm trọng.",
+        "correct": true
+      },
+      {
+        "text": "Vì chúng rất phổ biến ở châu Âu.",
+        "correct": false
+      },
+      {
+        "text": "Vì chúng đẹp hơn xe châu Âu.",
+        "correct": false
+      },
+      {
+        "text": "Vì chúng có giá rẻ hơn xe châu Âu.",
+        "correct": false
+      }
+    ]
+  },
+  {
     "title": "6 năm vừa làm vừa học, chàng trai 9X ẵm trọn học bổng tiến sĩ 15 tỷ đồng",
     "content": "Đặng Võ Hiệp, chàng trai 9X đến từ TP.HCM, đã xuất sắc giành học bổng tiến sĩ toàn phần trị giá 15 tỷ đồng từ Đại học Virginia và Đại học Missouri (Mỹ) sau 6 năm vừa làm vừa học. Trước đó, Hiệp đã có hai tấm bằng thạc sĩ từ Anh và Mỹ, cùng với kinh nghiệm làm việc trong lĩnh vực phân tích dữ liệu. Hướng nghiên cứu của Hiệp tập trung vào ứng dụng trí tuệ nhân tạo và học máy trong việc dự đoán thời tiết cực đoan và phòng tránh thiên tai.",
     "link": "https://dantri.com.vn/giao-duc/6-nam-vua-lam-vua-hoc-chang-trai-9x-am-tron-hoc-bong-tien-si-15-ty-dong-20250323204410785.htm",
@@ -4553,28 +4580,32 @@
     ]
   },
   {
-    "title": "Xe bán  tải Mỹ bị lo ngại gây ô nhiễm môi trường ở Đức",
-    "content": "Tổ chức Hành động Môi trường Đức (DUH) đã khởi kiện Cục Giao thông vận tải liên bang Đức nhằm yêu cầu công bố dữ liệu về xe bán tải Mỹ, cho rằng dòng xe này gây ô nhiễm nghiêm trọng và không đáp ứng các tiêu chuẩn an toàn của EU. Xe bán tải cỡ lớn như Ford F-Series và Ram phát thải CO2 cao gấp 9 lần so với xe châu Âu thông thường. DUH cảnh báo rằng việc cho phép các xe này hoạt động mà không tuân thủ quy định có thể dẫn đến thiệt hại lớn cho môi trường và gia tăng tai nạn giao thông.",
-    "link": "https://vnexpress.net/xe-ban-tai-my-bi-lo-ngai-gay-o-nhiem-moi-truong-o-duc-4864995.html",
+    "title": "Vườn hoa Lý Thái Tổ trước ngày cải tạo",
+    "content": "Vườn hoa Lý Thái Tổ tại Hà Nội sẽ được cải tạo từ tháng 4 đến tháng 10 năm 2025 nhằm nâng cao cảnh quan và công năng sử dụng. Dự án bao gồm việc mở rộng sân Khánh tiết, lắp đặt Km0, và cải tạo cảnh quan cây xanh với nguyên tắc giữ lại các cây cổ thụ có giá trị. Sau khi cải tạo, tổng số cây bóng mát tại vườn sẽ tăng lên 114 cây, đồng thời sẽ có các hệ thống phun nước âm sàn để cải thiện khí hậu khu vực.",
+    "link": "https://vnexpress.net/vuon-hoa-ly-thai-to-truoc-ngay-cai-tao-4865208.html",
     "cat": "thoi-su",
-    "positivity": 4,
+    "positivity": 8,
     "importance": 7,
-    "question": "Tại sao xe bán tải Mỹ bị lo ngại ở Đức?",
+    "question": "Vườn hoa Lý Thái Tổ sẽ được cải tạo vào thời gian nào?",
     "answers": [
       {
-        "text": "Vì chúng gây ô nhiễm môi trường nghiêm trọng.",
+        "text": "Từ tháng 4 đến tháng 10 năm 2025",
         "correct": true
       },
       {
-        "text": "Vì chúng rất phổ biến ở châu Âu.",
+        "text": "Từ tháng 1 đến tháng 6 năm 2025",
         "correct": false
       },
       {
-        "text": "Vì chúng đẹp hơn xe châu Âu.",
+        "text": "Từ tháng 7 đến tháng 12 năm 2025",
         "correct": false
       },
       {
-        "text": "Vì chúng có giá rẻ hơn xe châu Âu.",
+        "text": "Từ tháng 3 đến tháng 9 năm 2024",
+        "correct": false
+      },
+      {
+        "text": "Từ tháng 5 đến tháng 10 năm 2023",
         "correct": false
       }
     ]
@@ -4629,64 +4660,6 @@
       },
       {
         "text": "300 chai rượu",
-        "correct": false
-      }
-    ]
-  },
-  {
-    "title": "Vườn hoa Lý Thái Tổ trước ngày cải tạo",
-    "content": "Vườn hoa Lý Thái Tổ tại Hà Nội sẽ được cải tạo từ tháng 4 đến tháng 10 năm 2025 nhằm nâng cao cảnh quan và công năng sử dụng. Dự án bao gồm việc mở rộng sân Khánh tiết, lắp đặt Km0, và cải tạo cảnh quan cây xanh với nguyên tắc giữ lại các cây cổ thụ có giá trị. Sau khi cải tạo, tổng số cây bóng mát tại vườn sẽ tăng lên 114 cây, đồng thời sẽ có các hệ thống phun nước âm sàn để cải thiện khí hậu khu vực.",
-    "link": "https://vnexpress.net/vuon-hoa-ly-thai-to-truoc-ngay-cai-tao-4865208.html",
-    "cat": "thoi-su",
-    "positivity": 8,
-    "importance": 7,
-    "question": "Vườn hoa Lý Thái Tổ sẽ được cải tạo vào thời gian nào?",
-    "answers": [
-      {
-        "text": "Từ tháng 4 đến tháng 10 năm 2025",
-        "correct": true
-      },
-      {
-        "text": "Từ tháng 1 đến tháng 6 năm 2025",
-        "correct": false
-      },
-      {
-        "text": "Từ tháng 7 đến tháng 12 năm 2025",
-        "correct": false
-      },
-      {
-        "text": "Từ tháng 3 đến tháng 9 năm 2024",
-        "correct": false
-      },
-      {
-        "text": "Từ tháng 5 đến tháng 10 năm 2023",
-        "correct": false
-      }
-    ]
-  },
-  {
-    "title": "Mỹ nhân điền kinh lại gây tranh cãi dù lập kỷ lục Trung Quốc",
-    "content": "Mỹ nhân điền kinh Wu Yanni đã gây ra nhiều tranh cãi mặc dù lập kỷ lục quốc gia trong nội dung 60m rào tại giải vô địch thế giới, khi cô chỉ về thứ ba ở bán kết và không đủ điều kiện vào chung kết. Dù thành tích của cô là 8,01 giây, tốt thứ tư của một phụ nữ châu Á, nhưng nhiều người đã chỉ trích cô trên mạng xã hội, cho rằng sự nổi tiếng của cô không tương xứng với khả năng. Wu Yanni, nữ VĐV 27 tuổi, đã rơi nước mắt khi biết mình lập kỷ lục và cảm ơn sự ủng hộ của gia đình và bạn bè.",
-    "link": "https://vnexpress.net/my-nhan-dien-kinh-lai-gay-tranh-cai-du-lap-ky-luc-trung-quoc-4865285.html",
-    "cat": "the-thao",
-    "positivity": 5,
-    "importance": 7,
-    "question": "Tại sao Wu Yanni lại gây tranh cãi mặc dù lập kỷ lục quốc gia?",
-    "answers": [
-      {
-        "text": "Cô ấy không vào được chung kết dù lập kỷ lục quốc gia.",
-        "correct": true
-      },
-      {
-        "text": "Cô ấy giành huy chương vàng tại giải vô địch.",
-        "correct": false
-      },
-      {
-        "text": "Cô ấy có nhiều hình xăm và gây chú ý trên mạng.",
-        "correct": false
-      },
-      {
-        "text": "Cô ấy đã từng giành huy chương bạc Olympic.",
         "correct": false
       }
     ]
