--- a/home_quizzes.html
+++ b/home_quizzes.html
@@ -498,6 +498,60 @@
     ]
   },
   {
+    "title": "Chuyện về nữ sinh trẻ tuổi nhất nhận giải thưởng Lý Tự Trọng 2025",
+    "content": "Nguyễn Thị Cẩm Ly, nữ sinh 18 tuổi từ Trường THPT Cẩm Bình, TP Hà Tĩnh, đã xuất sắc nhận giải thưởng Lý Tự Trọng 2025, trở thành cán bộ Đoàn trẻ tuổi nhất được vinh danh. Cẩm Ly không chỉ là bí thư chi đoàn mà còn tham gia nhiều hoạt động Đoàn sôi nổi, như chiến dịch 'Tiếp sức mùa thi' và các phong trào thiện nguyện. Với thành tích học tập ấn tượng, cô gái này là tấm gương tiêu biểu về tinh thần cống hiến và trách nhiệm đối với cộng đồng.",
+    "link": "https://dantri.com.vn/giao-duc/chuyen-ve-nu-sinh-tre-tuoi-nhat-nhan-giai-thuong-ly-tu-trong-2025-20250325230935368.htm",
+    "cat": "giao-duc",
+    "positivity": 9,
+    "importance": 8,
+    "question": "Nguyễn Thị Cẩm Ly là ai và cô đã nhận giải thưởng gì?",
+    "answers": [
+      {
+        "text": "Nguyễn Thị Cẩm Ly là nữ sinh nhận giải thưởng Lý Tự Trọng 2025.",
+        "correct": true
+      },
+      {
+        "text": "Nguyễn Thị Cẩm Ly là một nhà khoa học nổi tiếng.",
+        "correct": false
+      },
+      {
+        "text": "Nguyễn Thị Cẩm Ly là một nghệ sĩ âm nhạc.",
+        "correct": false
+      },
+      {
+        "text": "Nguyễn Thị Cẩm Ly là một nhà văn trẻ.",
+        "correct": false
+      }
+    ]
+  },
+  {
+    "title": "Diễn viên \"Mùi ngò gai\" giải nghệ sang Mỹ: Luôn nhớ quê, phát hiện khối u",
+    "content": "Nghệ sĩ Minh Hoàng, nổi tiếng với vai diễn trong phim \"Mùi ngò gai\", đã chọn định cư tại Mỹ từ năm 2022. Mặc dù đã tuyên bố giải nghệ, ông vẫn thể hiện tình yêu với nghệ thuật bằng cách trở lại tham gia một dự án phim mới. Gần đây, ông gặp phải lo ngại về sức khỏe khi bác sĩ phát hiện một khối u ở phổi, nhưng sau nhiều kiểm tra, may mắn là đó chỉ là u lành tính. Ông chia sẻ rằng cuộc sống ở xứ người mang lại cho ông nhiều kỷ niệm và sự bình yên, mặc dù luôn nhớ quê hương.",
+    "link": "https://dantri.com.vn/giai-tri/dien-vien-mui-ngo-gai-giai-nghe-sang-my-luon-nho-que-phat-hien-khoi-u-20250325150310170.htm",
+    "cat": "giai-tri",
+    "positivity": 7,
+    "importance": 6,
+    "question": "Nghệ sĩ Minh Hoàng đã gặp vấn đề gì về sức khỏe gần đây?",
+    "answers": [
+      {
+        "text": "Khối u ở phổi",
+        "correct": true
+      },
+      {
+        "text": "Đau tim",
+        "correct": false
+      },
+      {
+        "text": "Cúm nặng",
+        "correct": false
+      },
+      {
+        "text": "Gãy xương chân",
+        "correct": false
+      }
+    ]
+  },
+  {
     "title": "Cả xóm 'biến' xe kéo lúa thành xe đón dâu độc đáo",
     "content": "Tại xã Hùng Tiến, huyện Nam Đàn, Nghệ An, ông Nguyễn Văn Lộc cùng với bà con trong xóm đã cải tạo một chiếc xe kéo lúa thành xe đón dâu độc đáo cho đám cưới của đôi trẻ Nguyễn Văn Mạnh và Nguyễn Thu Hiền. Chiếc xe được trang trí kỳ công với hoa và bóng bay, mang lại kỷ niệm đáng nhớ cho ngày trọng đại. Đám cưới không chỉ tạo nên không khí vui vẻ mà còn thể hiện tình cảm và sự gắn kết của cộng đồng.",
     "link": "https://vnexpress.net/ca-xom-bien-xe-keo-lua-thanh-xe-don-dau-doc-dao-4865817.html",
@@ -799,37 +853,6 @@
     ]
   },
   {
-    "title": "Sáp nhập tỉnh thành nên dựa vào nguyên tắc nào?",
-    "content": "Chuyên gia đề xuất các nguyên tắc sáp nhập tỉnh thành tại Việt Nam, tập trung vào việc tăng số lượng địa phương có biển, nâng cao sức mạnh kinh tế và đảm bảo an ninh quốc phòng. Việc sáp nhập nhằm giảm số lượng đơn vị hành chính cấp tỉnh từ 63 xuống còn khoảng một nửa, đồng thời tạo động lực phát triển bền vững cho các địa phương. Các tiêu chí sáp nhập không chỉ dựa vào quy mô dân số và diện tích mà còn cần nghiên cứu kỹ lưỡng về quy hoạch tổng thể và chiến lược phát triển kinh tế xã hội.",
-    "link": "https://vnexpress.net/sap-nhap-tinh-thanh-nen-dua-vao-nguyen-tac-nao-4865684.html",
-    "cat": "thoi-su",
-    "positivity": 8,
-    "importance": 9,
-    "question": "Sáp nhập tỉnh thành nên dựa vào những nguyên tắc nào?",
-    "answers": [
-      {
-        "text": "Tăng tối đa số lượng địa phương có biển",
-        "correct": true
-      },
-      {
-        "text": "Giảm quy mô dân số",
-        "correct": false
-      },
-      {
-        "text": "Tăng cường sử dụng lao động giá rẻ",
-        "correct": false
-      },
-      {
-        "text": "Chỉ dựa vào diện tích tự nhiên",
-        "correct": false
-      },
-      {
-        "text": "Tạo ra nhiều đơn vị hành chính mới",
-        "correct": false
-      }
-    ]
-  },
-  {
     "title": "Cố đô Huế những ngày giải phóng 50 năm trước",
     "content": "Ngày 25/3/1975, lá cờ của Quân Giải phóng miền Nam Việt Nam đã được cắm trên Kỳ đài, đánh dấu sự giải phóng hoàn toàn của cố đô Huế. Chiến dịch Huế - Đà Nẵng được thực hiện sau khi giải phóng Buôn Ma Thuột, với mục tiêu giải phóng các thành phố quan trọng này. Sau 50 năm, Huế đã trở thành một đô thị di sản hàng đầu của Việt Nam với 8 di sản văn hóa thế giới được UNESCO công nhận.",
     "link": "https://vnexpress.net/co-do-hue-nhung-ngay-giai-phong-50-nam-truoc-4865641.html",
@@ -856,6 +879,37 @@
       },
       {
         "text": "20/4/1975",
+        "correct": false
+      }
+    ]
+  },
+  {
+    "title": "Sáp nhập tỉnh thành nên dựa vào nguyên tắc nào?",
+    "content": "Chuyên gia đề xuất các nguyên tắc sáp nhập tỉnh thành tại Việt Nam, tập trung vào việc tăng số lượng địa phương có biển, nâng cao sức mạnh kinh tế và đảm bảo an ninh quốc phòng. Việc sáp nhập nhằm giảm số lượng đơn vị hành chính cấp tỉnh từ 63 xuống còn khoảng một nửa, đồng thời tạo động lực phát triển bền vững cho các địa phương. Các tiêu chí sáp nhập không chỉ dựa vào quy mô dân số và diện tích mà còn cần nghiên cứu kỹ lưỡng về quy hoạch tổng thể và chiến lược phát triển kinh tế xã hội.",
+    "link": "https://vnexpress.net/sap-nhap-tinh-thanh-nen-dua-vao-nguyen-tac-nao-4865684.html",
+    "cat": "thoi-su",
+    "positivity": 8,
+    "importance": 9,
+    "question": "Sáp nhập tỉnh thành nên dựa vào những nguyên tắc nào?",
+    "answers": [
+      {
+        "text": "Tăng tối đa số lượng địa phương có biển",
+        "correct": true
+      },
+      {
+        "text": "Giảm quy mô dân số",
+        "correct": false
+      },
+      {
+        "text": "Tăng cường sử dụng lao động giá rẻ",
+        "correct": false
+      },
+      {
+        "text": "Chỉ dựa vào diện tích tự nhiên",
+        "correct": false
+      },
+      {
+        "text": "Tạo ra nhiều đơn vị hành chính mới",
         "correct": false
       }
     ]
@@ -1209,32 +1263,28 @@
     ]
   },
   {
-    "title": "Doãn Hải My thu hút ánh nhìn với phong cách nữ tính",
-    "content": "Doãn Hải My, vợ cầu thủ Đoàn Văn Hậu, đã thu hút được sự chú ý của giới mộ điệu thời trang với phong cách nữ tính và hiện đại. Cô đã phối đồ và lựa chọn túi xách theo xu hướng thời trang đang được ưa chuộng toàn cầu, đặc biệt là các mẫu túi mini. Thiết kế trang phục của cô mang đậm dấu ấn cá tính và thanh lịch, phù hợp với xu hướng mùa xuân hè năm nay.",
-    "link": "https://dantri.com.vn/giai-tri/doan-hai-my-thu-hut-anh-nhin-voi-phong-cach-nu-tinh-20250324173039479.htm",
-    "cat": "giai-tri",
-    "positivity": 9,
+    "title": "Sếp Xiaomi thả dưa hấu từ tầng 6 chứng minh độ bền pin xe điện",
+    "content": "Giám đốc điều hành Xiaomi, Lei Jun, đã thực hiện một thử nghiệm thú vị để chứng minh độ bền của pin xe điện bằng cách thả một quả dưa hấu từ tầng 6 của nhà máy. Kết quả cho thấy quả dưa hấu không bị vỡ nhờ vào lớp bảo vệ 'áo giáp chống đạn' mà Xiaomi áp dụng cho pin xe điện SU7 Ultra. Công nghệ này giúp tăng cường độ bền và an toàn cho pin, với nhiều biện pháp bảo vệ như khung thép cường độ cao và hệ thống quản lý pin thông minh.",
+    "link": "https://vnexpress.net/sep-xiaomi-tha-dua-hau-tu-tang-6-chung-minh-do-ben-pin-xe-dien-4865604.html",
+    "cat": "oto-xe-may",
+    "positivity": 8,
     "importance": 7,
-    "question": "Doãn Hải My thu hút sự chú ý với phong cách gì?",
+    "question": "Tại sao Lei Jun lại thả dưa hấu từ tầng 6 của nhà máy?",
     "answers": [
       {
-        "text": "Phong cách nữ tính",
+        "text": "Để chứng minh độ bền của pin xe điện.",
         "correct": true
       },
       {
-        "text": "Phong cách nam tính",
+        "text": "Để thử nghiệm độ an toàn của ô tô.",
         "correct": false
       },
       {
-        "text": "Phong cách thể thao",
+        "text": "Để quảng bá sản phẩm mới.",
         "correct": false
       },
       {
-        "text": "Phong cách truyền thống",
-        "correct": false
-      },
-      {
-        "text": "Phong cách công sở",
+        "text": "Để tạo sự chú ý cho truyền thông.",
         "correct": false
       }
     ]
@@ -1294,28 +1344,32 @@
     ]
   },
   {
-    "title": "Sếp Xiaomi thả dưa hấu từ tầng 6 chứng minh độ bền pin xe điện",
-    "content": "Giám đốc điều hành Xiaomi, Lei Jun, đã thực hiện một thử nghiệm thú vị để chứng minh độ bền của pin xe điện bằng cách thả một quả dưa hấu từ tầng 6 của nhà máy. Kết quả cho thấy quả dưa hấu không bị vỡ nhờ vào lớp bảo vệ 'áo giáp chống đạn' mà Xiaomi áp dụng cho pin xe điện SU7 Ultra. Công nghệ này giúp tăng cường độ bền và an toàn cho pin, với nhiều biện pháp bảo vệ như khung thép cường độ cao và hệ thống quản lý pin thông minh.",
-    "link": "https://vnexpress.net/sep-xiaomi-tha-dua-hau-tu-tang-6-chung-minh-do-ben-pin-xe-dien-4865604.html",
-    "cat": "oto-xe-may",
-    "positivity": 8,
+    "title": "Doãn Hải My thu hút ánh nhìn với phong cách nữ tính",
+    "content": "Doãn Hải My, vợ cầu thủ Đoàn Văn Hậu, đã thu hút được sự chú ý của giới mộ điệu thời trang với phong cách nữ tính và hiện đại. Cô đã phối đồ và lựa chọn túi xách theo xu hướng thời trang đang được ưa chuộng toàn cầu, đặc biệt là các mẫu túi mini. Thiết kế trang phục của cô mang đậm dấu ấn cá tính và thanh lịch, phù hợp với xu hướng mùa xuân hè năm nay.",
+    "link": "https://dantri.com.vn/giai-tri/doan-hai-my-thu-hut-anh-nhin-voi-phong-cach-nu-tinh-20250324173039479.htm",
+    "cat": "giai-tri",
+    "positivity": 9,
     "importance": 7,
-    "question": "Tại sao Lei Jun lại thả dưa hấu từ tầng 6 của nhà máy?",
+    "question": "Doãn Hải My thu hút sự chú ý với phong cách gì?",
     "answers": [
       {
-        "text": "Để chứng minh độ bền của pin xe điện.",
+        "text": "Phong cách nữ tính",
         "correct": true
       },
       {
-        "text": "Để thử nghiệm độ an toàn của ô tô.",
+        "text": "Phong cách nam tính",
         "correct": false
       },
       {
-        "text": "Để quảng bá sản phẩm mới.",
+        "text": "Phong cách thể thao",
         "correct": false
       },
       {
-        "text": "Để tạo sự chú ý cho truyền thông.",
+        "text": "Phong cách truyền thống",
+        "correct": false
+      },
+      {
+        "text": "Phong cách công sở",
         "correct": false
       }
     ]
@@ -2689,33 +2743,6 @@
     ]
   },
   {
-    "title": "Đau họng do viêm họng và trào ngược có khác nhau?",
-    "content": "Đau họng do viêm họng và trào ngược họng thanh quản có những triệu chứng khác nhau. Viêm họng thường gây ra cảm giác đau, sưng đỏ và có thể sốt, trong khi trào ngược họng thường kèm theo nóng rát, ợ hơi và không có sốt. Điều trị hai loại bệnh này cũng khác nhau, với viêm họng có thể tự khỏi nhưng trào ngược cần thay đổi lối sống và điều trị nội khoa. Người bệnh nên đi khám để xác định nguyên nhân chính xác và có phương pháp điều trị phù hợp.",
-    "link": "https://vnexpress.net/dau-hong-do-viem-hong-va-trao-nguoc-co-khac-nhau-4865609.html",
-    "cat": "suc-khoe",
-    "positivity": 7,
-    "importance": 8,
-    "question": "Đau họng do viêm họng và trào ngược có gì khác nhau?",
-    "answers": [
-      {
-        "text": "Đau họng do viêm họng thường kèm theo sốt và đau rát khi nuốt.",
-        "correct": true
-      },
-      {
-        "text": "Đau họng do viêm họng không có triệu chứng kèm theo.",
-        "correct": false
-      },
-      {
-        "text": "Đau họng do trào ngược không có đau nhức cơ thể.",
-        "correct": false
-      },
-      {
-        "text": "Đau họng do viêm họng không liên quan đến nhiễm trùng.",
-        "correct": false
-      }
-    ]
-  },
-  {
     "title": "5 món ăn giàu kẽm giúp tăng miễn dịch",
     "content": "Bài viết giới thiệu 5 món ăn giàu kẽm giúp tăng cường hệ miễn dịch, bao gồm hàu, thịt bò, ức gà, các loại đậu và trứng. Hàu cung cấp lượng kẽm cao nhất, tiếp theo là thịt bò và ức gà, trong khi các loại đậu và trứng cũng là nguồn cung cấp kẽm và protein tốt. Những thực phẩm này không chỉ giúp tăng cường miễn dịch mà còn hỗ trợ sức khỏe tổng thể.",
     "link": "https://vnexpress.net/5-mon-an-giau-kem-giup-tang-mien-dich-4865564.html",
@@ -2738,6 +2765,33 @@
       },
       {
         "text": "Mì tôm, nước ngọt, khoai tây chiên",
+        "correct": false
+      }
+    ]
+  },
+  {
+    "title": "Đau họng do viêm họng và trào ngược có khác nhau?",
+    "content": "Đau họng do viêm họng và trào ngược họng thanh quản có những triệu chứng khác nhau. Viêm họng thường gây ra cảm giác đau, sưng đỏ và có thể sốt, trong khi trào ngược họng thường kèm theo nóng rát, ợ hơi và không có sốt. Điều trị hai loại bệnh này cũng khác nhau, với viêm họng có thể tự khỏi nhưng trào ngược cần thay đổi lối sống và điều trị nội khoa. Người bệnh nên đi khám để xác định nguyên nhân chính xác và có phương pháp điều trị phù hợp.",
+    "link": "https://vnexpress.net/dau-hong-do-viem-hong-va-trao-nguoc-co-khac-nhau-4865609.html",
+    "cat": "suc-khoe",
+    "positivity": 7,
+    "importance": 8,
+    "question": "Đau họng do viêm họng và trào ngược có gì khác nhau?",
+    "answers": [
+      {
+        "text": "Đau họng do viêm họng thường kèm theo sốt và đau rát khi nuốt.",
+        "correct": true
+      },
+      {
+        "text": "Đau họng do viêm họng không có triệu chứng kèm theo.",
+        "correct": false
+      },
+      {
+        "text": "Đau họng do trào ngược không có đau nhức cơ thể.",
+        "correct": false
+      },
+      {
+        "text": "Đau họng do viêm họng không liên quan đến nhiễm trùng.",
         "correct": false
       }
     ]
@@ -4261,6 +4315,33 @@
     ]
   },
   {
+    "title": "Siêu mẫu Minh Tú sau kết hôn: Thay đổi \"180 độ\", chồng Tây cưng chiều",
+    "content": "Siêu mẫu Minh Tú đã có nhiều thay đổi tích cực trong cuộc sống sau khi kết hôn với chồng Tây, Christopher. Cô chia sẻ rằng sau khi về chung một nhà, tính cách của mình đã trở nên mềm mỏng và nữ tính hơn, thường xuyên vào bếp nấu ăn và chăm sóc tổ ấm. Minh Tú cũng cho biết chồng là nguồn động viên lớn, giúp cô vượt qua giai đoạn khó khăn trong cuộc sống. Hai người thường xuyên dành thời gian cho nhau, đi du lịch và thể hiện tình cảm ngọt ngào qua những hành động nhỏ.",
+    "link": "https://dantri.com.vn/giai-tri/sieu-mau-minh-tu-sau-ket-hon-thay-doi-180-do-chong-tay-cung-chieu-20250324145813189.htm",
+    "cat": "giai-tri",
+    "positivity": 9,
+    "importance": 7,
+    "question": "Minh Tú đã thay đổi như thế nào sau khi kết hôn?",
+    "answers": [
+      {
+        "text": "Cô trở nên nữ tính và chăm sóc gia đình hơn.",
+        "correct": true
+      },
+      {
+        "text": "Cô vẫn giữ nguyên tính cách mạnh mẽ như trước.",
+        "correct": false
+      },
+      {
+        "text": "Cô không còn tham gia vào các hoạt động xã hội.",
+        "correct": false
+      },
+      {
+        "text": "Cô trở nên ít nổi tiếng hơn.",
+        "correct": false
+      }
+    ]
+  },
+  {
     "title": "Mỹ phát triển SUV bọc thép mới bảo vệ Tổng thống",
     "content": "Giám đốc Cơ quan Mật vụ Mỹ vừa có cuộc gặp với lãnh đạo General Motors để thảo luận về việc phát triển SUV bọc thép mới nhằm bảo vệ Tổng thống. Cuộc họp diễn ra trong bối cảnh GM đang chế tạo phiên bản mới của chiếc limousine dành cho Tổng thống có biệt danh \"The Beast\". Hợp đồng trị giá 14,8 triệu USD đã được ký kết với GM để tiến hành dự án này, nhưng thời gian ra mắt xe mới vẫn chưa được xác định.",
     "link": "https://vnexpress.net/my-phat-trien-suv-boc-thep-moi-bao-ve-tong-thong-4865414.html",
@@ -4287,33 +4368,6 @@
       },
       {
         "text": "Xe điện",
-        "correct": false
-      }
-    ]
-  },
-  {
-    "title": "Siêu mẫu Minh Tú sau kết hôn: Thay đổi \"180 độ\", chồng Tây cưng chiều",
-    "content": "Siêu mẫu Minh Tú đã có nhiều thay đổi tích cực trong cuộc sống sau khi kết hôn với chồng Tây, Christopher. Cô chia sẻ rằng sau khi về chung một nhà, tính cách của mình đã trở nên mềm mỏng và nữ tính hơn, thường xuyên vào bếp nấu ăn và chăm sóc tổ ấm. Minh Tú cũng cho biết chồng là nguồn động viên lớn, giúp cô vượt qua giai đoạn khó khăn trong cuộc sống. Hai người thường xuyên dành thời gian cho nhau, đi du lịch và thể hiện tình cảm ngọt ngào qua những hành động nhỏ.",
-    "link": "https://dantri.com.vn/giai-tri/sieu-mau-minh-tu-sau-ket-hon-thay-doi-180-do-chong-tay-cung-chieu-20250324145813189.htm",
-    "cat": "giai-tri",
-    "positivity": 9,
-    "importance": 7,
-    "question": "Minh Tú đã thay đổi như thế nào sau khi kết hôn?",
-    "answers": [
-      {
-        "text": "Cô trở nên nữ tính và chăm sóc gia đình hơn.",
-        "correct": true
-      },
-      {
-        "text": "Cô vẫn giữ nguyên tính cách mạnh mẽ như trước.",
-        "correct": false
-      },
-      {
-        "text": "Cô không còn tham gia vào các hoạt động xã hội.",
-        "correct": false
-      },
-      {
-        "text": "Cô trở nên ít nổi tiếng hơn.",
         "correct": false
       }
     ]
